--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">这个是我的个人博客中心</div>
     <script type="text/javascript" src="/dist/vendors.js"></script>
     <script type="text/javascript" src="/dist/main.js"></script>
 </body>
